<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    tools:context=".ui.register.RegisterFragment">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="13dp"
        android:background="@drawable/disaster_fire_logo"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/textView"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/captain_irish"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/mustFilledIn"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/star"
        android:scaleType="fitXY"
        app:layout_constraintRight_toLeftOf="@+id/registerName"
        app:layout_constraintTop_toTopOf="@+id/registerName" />

    <ImageView
        android:id="@+id/mustFilledIn1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/star"
        android:scaleType="fitXY"
        app:layout_constraintRight_toLeftOf="@+id/registerEmail"
        app:layout_constraintTop_toTopOf="@+id/registerEmail" />

    <ImageView
        android:id="@+id/mustFilledIn2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/star"
        android:scaleType="fitXY"
        app:layout_constraintRight_toLeftOf="@+id/registerPassword"
        app:layout_constraintTop_toTopOf="@+id/registerPassword" />

    <ImageView
        android:id="@+id/mustFilledIn3"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/star"
        android:scaleType="fitXY"
        app:layout_constraintRight_toLeftOf="@+id/registerPhone"
        app:layout_constraintTop_toTopOf="@+id/registerPhone" />


    <Button
        android:id="@+id/registerFinish"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/button_finish"
        android:text="-&gt;"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@+id/registerActivationCode"
        app:layout_constraintTop_toBottomOf="@+id/registerActivationCode" />

    <Button
        android:id="@+id/registerBack"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="0dp"
        android:background="@drawable/button_back"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@+id/registerActivationCode"
        app:layout_constraintTop_toBottomOf="@+id/registerActivationCode" />


    <Button
        android:id="@+id/ActivationExplanation"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/register_activation_explanation"
        android:onClick="openPopWindow"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toRightOf="@+id/registerActivationCode"
        app:layout_constraintTop_toTopOf="@+id/registerActivationCode" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edittext"
        android:ems="15"
        android:hint="Email"
        android:textColorHint="@color/white"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/registerName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edittext"
        android:ems="15"
        android:hint="Name"
        android:textColorHint="@color/white"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail" />


    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edittext"
        android:ems="15"
        android:hint="Password"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerName" />

    <EditText
        android:id="@+id/registerPhone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edittext"
        android:ems="15"
        android:hint="Phone Number"
        android:textColorHint="@color/white"
        android:inputType="textPhonetic"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

    <EditText
        android:id="@+id/registerActivationCode"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edittext"
        android:ems="15"
        android:hint="Activation Code"
        android:textColorHint="@color/white"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPhone" />

    <ImageView
        android:id="@+id/passwordVisible"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/eye1"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/registerPassword"
        app:layout_constraintRight_toRightOf="@+id/registerPassword"
        app:layout_constraintTop_toTopOf="@+id/registerPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>