...
    android:background="@drawable/popup_window_bg"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">


    <ImageView
        android:id="@+id/disaster_logo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="13dp"
        android:scaleType="fitXY" />


    <TextView
        android:id="@+id/tv_pop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        android:text="Task"
        android:textColor="@color/black"
        android:layout_toRightOf="@+id/disaster_logo" />

    <ImageButton
        android:id="@+id/close_btn1"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/closebutton"
        android:layout_alignParentRight="true"/>
...
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/taskrelativeLayout">

            <TextView
                android:id="@+id/type_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:text="Type:"
...
                android:layout_marginTop="3dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_toRightOf="@+id/type_intro" />

            <TextView
                android:id="@+id/location_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:text="Location:"
                android:textColor="@color/black"
...
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_toRightOf="@+id/location_intro"
                android:layout_below="@+id/type_intro"/>

            <TextView
                android:id="@+id/ftime_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location_intro"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
...
                android:layout_marginTop="3dp"
                android:textSize="15sp"
                android:layout_toRightOf="@+id/injury_intro"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/task_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:text="Task:"
                android:textColor="@color/black"
...
