<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/nav_bar_map"
        android:title="@string/title_home"
        android:background="@drawable/nav_item"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/nav_bar_disaster"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/nav_bar_report"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/nav_bar_account"
        android:title="@string/title_account" />

</menu>
